fixed the width and height of my image to take away stretch look

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,7 @@ a {
 
 #my-image {
     float: left;
-    width: 200px;
-    height: 225px;
+    width: 170px;
     margin-right: 20px;
     
 }
